# CMakeList.txt : CMake project for StockCentralSystem, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (StockCentralSystem "StockCentralSystem.cpp" "StockCentralSystem.h")

# TODO: Add tests and install targets if needed.
